[package]
name = "reord"
version = "0.1.4"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/reord"
description = "Utility crate to test for race conditions and proper locking in async code"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ekleog/reord"
keywords = ["async", "testing", "fuzz", "utility", "test"]
categories = ["asynchronous", "concurrency", "development-tools"]

[features]
test = []

[dependencies]
futures = "0.3.29"
rand = "0.8.5"
tokio = { version = "1.35", features = ["rt", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1.35", features = ["macros"] }
